// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportCheckListTest render 0 results 1`] = `
<ul
  className="report-checks"
/>
`;

exports[`ReportCheckListTest render 0 results with congratulations 1`] = `
<div
  className="report-congrats"
>
  <div
    className="report-congrats-image"
  >
    <InlineImage
      alt=""
      type={5}
    />
  </div>
  <div
    className="report-congrats-screen"
  >
    <div
      className="report-congrats-message"
    >
      <div
        className="report-congrats-head"
      >
        Congratulations!
      </div>
      <div
        className="report-congrats-info"
      >
        No failed checks were found.
      </div>
    </div>
  </div>
</div>
`;

exports[`ReportCheckListTest render 1 result with instances 1`] = `
<ul
  className="report-checks"
>
  <li
    className="report-check"
  >
    <div
      className="report-check-top"
    >
      <NewTabLink
        aria-describedby="check-help-test1-0"
        href="https://help-url-1/"
      >
        rule-id-1
        :
      </NewTabLink>
       
      <span
        id="check-help-test1-0"
      >
        rule-help-1
      </span>
       
      <span>
        (
        2
        ) 
      </span>
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ]
        }
      />
    </div>
    <ReportInstanceList
      nodeResults={
        Array [
          Object {},
          Object {},
        ]
      }
    />
  </li>
</ul>
`;

exports[`ReportCheckListTest render 2 results 1`] = `
<ul
  className="report-checks"
>
  <li
    className="report-check"
  >
    <div
      className="report-check-top"
    >
      <NewTabLink
        aria-describedby="check-help-test2-0"
        href="https://help-url-1/"
      >
        rule-id-1
        :
      </NewTabLink>
       
      <span
        id="check-help-test2-0"
      >
        rule-help-1
      </span>
       
      <span>
        (
        2
        ) 
      </span>
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ]
        }
      />
    </div>
    <ReportInstanceList
      nodeResults={
        Array [
          Object {},
          Object {},
        ]
      }
    />
  </li>
  <li
    className="report-check"
  >
    <div
      className="report-check-top"
    >
      <NewTabLink
        aria-describedby="check-help-test2-1"
        href="https://help-url-2/"
      >
        rule-id-2
        :
      </NewTabLink>
       
      <span
        id="check-help-test2-1"
      >
        rule-help-2
      </span>
       
      <span>
        (
        1
        ) 
      </span>
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "test href 2",
              "text": "test text 2",
            },
          ]
        }
      />
    </div>
    <ReportInstanceList
      nodeResults={
        Array [
          Object {},
        ]
      }
    />
  </li>
</ul>
`;

exports[`ReportCheckListTest render, showInstanceCount = false 1`] = `
<ul
  className="report-checks"
>
  <li
    className="report-check"
  >
    <div
      className="report-check-top"
    >
      <NewTabLink
        aria-describedby="check-help-test2-0"
        href="https://help-url-1/"
      >
        rule-id-1
        :
      </NewTabLink>
       
      <span
        id="check-help-test2-0"
      >
        rule-help-1
      </span>
       
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ]
        }
      />
    </div>
    <ReportInstanceList
      nodeResults={
        Array [
          Object {},
          Object {},
        ]
      }
    />
  </li>
  <li
    className="report-check"
  >
    <div
      className="report-check-top"
    >
      <NewTabLink
        aria-describedby="check-help-test2-1"
        href="https://help-url-2/"
      >
        rule-id-2
        :
      </NewTabLink>
       
      <span
        id="check-help-test2-1"
      >
        rule-help-2
      </span>
       
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "test href 2",
              "text": "test text 2",
            },
          ]
        }
      />
    </div>
    <ReportInstanceList
      nodeResults={
        Array [
          Object {},
        ]
      }
    />
  </li>
</ul>
`;

exports[`ReportCheckListTest render, showInstances = false 1`] = `
<ul
  className="report-checks"
>
  <li
    className="report-check"
  >
    <div
      className="report-check-top"
    >
      <NewTabLink
        aria-describedby="check-help-test2-0"
        href="https://help-url-1/"
      >
        rule-id-1
        :
      </NewTabLink>
       
      <span
        id="check-help-test2-0"
      >
        rule-help-1
      </span>
       
      <span>
        (
        2
        ) 
      </span>
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ]
        }
      />
    </div>
  </li>
  <li
    className="report-check"
  >
    <div
      className="report-check-top"
    >
      <NewTabLink
        aria-describedby="check-help-test2-1"
        href="https://help-url-2/"
      >
        rule-id-2
        :
      </NewTabLink>
       
      <span
        id="check-help-test2-1"
      >
        rule-help-2
      </span>
       
      <span>
        (
        1
        ) 
      </span>
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "test href 2",
              "text": "test text 2",
            },
          ]
        }
      />
    </div>
  </li>
</ul>
`;
